syntax = "proto3";

option java_multiple_files = true;
option java_package = "dsid.assignment.proto";
option java_outer_classname = "SingleLongProto";

package proto;

service SingleLongMessageService {
    rpc SendLong(SingleLong) returns (SingleLong) {}
}

message SingleLong {
    int64 long = 1;
}